# switchflow

./: .gitignore  CNAME  README.md  _config.yml  buildall.sh  configbuild.sh  configintreebuild.sh  index.html  params.json  promote.sh  rebuildall.sh  release.sh
sfrp/: CMakeLists.txt  doxygenConfig
sfrp/app/: AccessLog.cpp  AccessLog.hpp  CMakeLists.txt  CombinedLogRecord.cpp  CombinedLogRecord.hpp  HTTPHeaderBuffer.cpp  HTTPHeaderBuffer.hpp  HTTPProxyStreamHandler.cpp  HTTPProxyStreamHandler.h  IDataProvider.h  IDataSink.h  IHTTPMessageReceiver.h  IHTTPMessageReceiver.hpp  NonValidatingProxyStreamHandler.cpp  NonValidatingProxyStreamHandler.h  Options.cpp  Options.h  SVNVersion.h  TestHTTPServerRequestHandlers.h  _access_log.hpp  _h_t_t_p_proxy_stream_handler.cpp  _options.cpp  access_log.cpp  combined_log_record.cpp  combined_log_record.hpp  config.xml  gensvnversion.sh  host_map.cpp  host_map.hpp  host_rules.cpp  host_rules.hpp  http_header_buffer.cpp  http_header_buffer.hpp  http_proxy_stream_handler.cpp  http_proxy_stream_handler.hpp  i_data_provider.hpp  i_data_sink.hpp  i_http_message_receiver.hpp  i_request_postprocessor.hpp  non_validating_proxy_stream_handler.cpp  (+11 more)
sfrp/docs/: README  sfrp.conf
sfrp/proxylib/: CMakeLists.txt  IPipelineData.hpp  IProxyStreamHandler.h  NewConnectionHandler.cpp  NewConnectionHandler.h  ProxyHandler.cpp  ProxyHandler.h  ProxyStreamInterface.cpp  ProxyStreamInterface.h  RequestData.h  i_pipeline_data.hpp  i_pipeline_data_.hpp  i_proxy_stream_handler.hpp  new_connection_handler.cpp  new_connection_handler.hpp  pipeline_data_queue.cpp  pipeline_data_queue.hpp  proxy_handler.cpp  proxy_handler.hpp  proxy_stream_interface.cpp  proxy_stream_interface.hpp
sfrp/serverlib/: CMakeLists.txt  connection_handler.cpp  i_connection_handler.cpp  i_connection_handler.hpp  new_connection_handler.cpp  new_connection_handler.hpp
switchflow/http/: CMakeLists.txt  body_parser.cpp  body_parser.hpp  chunked_body_parser.cpp  chunked_body_parser.hpp  content_length_body_parser.cpp  content_length_body_parser.hpp  end_connection_body_parser.cpp  end_connection_body_parser.hpp  error_response.cpp  error_response.hpp  header_buffer.cpp  header_buffer.hpp  header_cache.cpp  header_cache.hpp  header_handler.cpp  header_handler.hpp  header_parser.cpp  header_parser.hpp  header_pusher.cpp  header_pusher.hpp  header_writer.cpp  header_writer.hpp  http.cpp  http.hpp  http.vcproj  i_body_receiver.hpp  i_header_receiver.hpp  i_line_receiver.hpp  i_start_line_receiver.hpp  i_uri_query_receiver.hpp  line_parser.cpp  line_parser.hpp  message_buffer.cpp  message_buffer.hpp  parser_types.hpp  request_buffer_wrapper.cpp  request_buffer_wrapper.hpp  response_buffer_wrapper.cpp  response_buffer_wrapper.hpp  (+9 more)
switchflow/http/client/: http_client_handler.cpp  http_client_handler.hpp  (+1 more)
test/: README  (+12 more)
(+97 files in other folders)
